Fixed overflowing issue on My Collection page and updated default data in import.sql for overflowing testing

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -1660,7 +1660,7 @@ form.search-bar::after {
 
 #collection-card-img {
     max-width: max-content !important;
-    max-height: 300px;
+    height: 250px;
 }
 
 .plant-wiki-card {
